--- a/chu.html
+++ b/chu.html
@@ -14,27 +14,30 @@
             width: 80%;
         }
 
-        .dkArea {
-            position: relative;
+        .dkArea, .chuArea {
             width: 50%;
             height: 300px;
             overflow: auto;
             border-radius: 20px;
+            padding: 10px;
+        }
+
+        .dkArea {
             background-image: linear-gradient(0deg, transparent, rgb(131, 216, 250));
         }
 
         .chuArea {
-            width: 50%;
-            height: 300px;
-            overflow: auto;
-            border-radius: 20px;
             background-image: linear-gradient(0deg, transparent, rgb(251, 149, 255));
         }
 
         .Area {
-            position: relative;
             display: flex;
             width: 100%;
+            position: relative;
+        }
+
+        ul {
+            padding: 0;
         }
 
         ul li {
@@ -58,8 +61,8 @@
             position: absolute;
             width: 100%;
             height: 110%;
-            top: 0px;
-            left: 0px;
+            top: 0;
+            left: 0;
             background-image: linear-gradient(180deg, transparent, rgb(255, 255, 255));
             z-index: 500;
             pointer-events: none;
@@ -69,8 +72,8 @@
 
 <body>
     <h1 class="LoveDate" style="color: rgb(255, 198, 208)"></h1>
-    <textarea></textarea>
-    <button onclick="WriteLetter('Write')">送出</button>
+    <textarea placeholder="寫下你想對寶貝說的話..."></textarea>
+    <button onclick="submitLetter()">送出</button>
     <div class="Area">
         <div class="block"></div>
         <ul class="dkArea"></ul>
@@ -78,63 +81,106 @@
     </div>
 
     <script>
+        const API_URL = "https://script.google.com/macros/s/AKfycbwO-N0r7v3MrFaQe2nr8tprzM_hBiwkH1CKPNHujLwY8SErxCH0lmRrln8hTQ7Baw9d/exec";
+
         window.onload = function () {
-            let today = new Date();
-            let todayDate = new Date(`${today.getMonth() + 1}/${today.getDate()}/${today.getFullYear()}`);
-            let startDate = new Date("11/14/2021");
-            let Howlong = Math.abs(todayDate - startDate);
-            document.querySelector(".LoveDate").innerHTML = `Love you ${Howlong / (1000 * 3600 * 24) + 1}th Day`;
-            WriteLetter("GetAllInfo");
+            renderLoveDay();
+            fetchData();
+        };
+
+        function renderLoveDay() {
+            const today = new Date();
+            const startDate = new Date("2021-11-14");
+            const diffDays = Math.floor((today - startDate) / (1000 * 60 * 60 * 24)) + 1;
+            document.querySelector(".LoveDate").textContent = `Love you ${diffDays}th Day`;
         }
-        function WriteLetter(mission) {
-            let text = document.querySelector("textarea").value;
+
+        function submitLetter() {
+            const letter = document.querySelector("textarea").value.trim();
+            if (!letter) {
+                alert("請先輸入內容");
+                return;
+            }
+
             $.ajax({
-                url: "https://script.google.com/macros/s/AKfycbz2_e_JteTwD5Jr4B3KHF_bEJSs9m4po8IfVhgCzTLRNRANBNszZAnm2jbp7fmYI2Wd/exec",
-                data: {
-                    mission: mission,
-                    letter: text
-                },
+                url: API_URL,
                 type: "POST",
-                dataType: 'text',
-                success: function (result) {
-                    if (mission == "GetAllInfo") { ShowOn(result); }
-                    else { window.location.href = 'https://dkai666.github.io/chu.html'; }
+                data: {
+                    mission: "WriteLetter",
+                    letter: letter
+                },
+                dataType: "text",
+                success: function (res) {
+                    alert("送出成功！");
+                    fetchData(); // 更新內容
+                    document.querySelector("textarea").value = ""; // 清空輸入框
+                },
+                error: function (err) {
+                    alert("送出失敗，請稍後再試。");
+                    console.error(err);
                 }
             });
         }
-        function ShowOn(result) {
-            let dkArea = document.querySelector('.dkArea');
-            let chuArea = document.querySelector('.chuArea');
+
+        function fetchData() {
+            $.ajax({
+                url: API_URL,
+                type: "POST",
+                data: {
+                    mission: "GetAllInfo"
+                },
+                dataType: "text",
+                success: function (res) {
+                    try {
+                        const data = JSON.parse(res);
+                        renderMessages(data);
+                    } catch (err) {
+                        console.error("JSON parse error:", err);
+                        alert("資料讀取錯誤");
+                    }
+                },
+                error: function (err) {
+                    console.error(err);
+                    alert("無法取得資料");
+                }
+            });
+        }
+
+        function renderMessages(data) {
+            const dkArea = document.querySelector('.dkArea');
+            const chuArea = document.querySelector('.chuArea');
             dkArea.innerHTML = '';
             chuArea.innerHTML = '';
-            let dkLi = dkArea.getElementsByTagName('li');
-            let chuLi = chuArea.getElementsByTagName('li');
-            resultArray = result.split(',');
-            let letterValue
-            for (i = 0; i < resultArray.length / 5; i++) {
-                for (j = 0; j < 5; j++) {
-                    if (j < 2 && resultArray[5 * i + j].length > 0) {
-                        letterValue = document.createElement('li');
-                        if (j % 2 == 1) { letterValue.innerHTML = `[${resultArray[5 * i + j]}]`; }
-                        else { letterValue.innerHTML = resultArray[5 * i + j]; }
-                        if (dkLi.length > 0) { dkArea.insertBefore(letterValue, dkLi[0]); }
-                        else {
-                            dkArea.appendChild(letterValue);
-                            dkLi = dkArea.getElementsByTagName('li');
-                        }
-                    }
-                    else if (j >= 2 && j < 4 && resultArray[5 * i + j].length > 0) {
-                        letterValue = document.createElement('li');
-                        if (j % 2 == 1) { letterValue.innerHTML = `[${resultArray[5 * i + j]}]`; }
-                        else { letterValue.innerHTML = resultArray[5 * i + j]; }
-                        if (chuLi.length > 0) { chuArea.insertBefore(letterValue, chuLi[0]); }
-                        else {
-                            chuArea.appendChild(letterValue);
-                            chuLi = chuArea.getElementsByTagName('li');
-                        }
-                    }
+
+            const dkFrag = document.createDocumentFragment();
+            const chuFrag = document.createDocumentFragment();
+
+            data.forEach(row => {
+                // row = [col1, col2, col3, col4, col5]
+                if (row[0]) {
+                    const li = document.createElement('li');
+                    li.textContent = row[0];
+                    dkFrag.appendChild(li);
                 }
-            }
+                if (row[1]) {
+                    const li = document.createElement('li');
+                    li.textContent = `[${row[1]}]`;
+                    dkFrag.appendChild(li);
+                }
+                if (row[2]) {
+                    const li = document.createElement('li');
+                    li.textContent = row[2];
+                    chuFrag.appendChild(li);
+                }
+                if (row[3]) {
+                    const li = document.createElement('li');
+                    li.textContent = `[${row[3]}]`;
+                    chuFrag.appendChild(li);
+                }
+            });
+
+            dkArea.appendChild(dkFrag);
+            chuArea.appendChild(chuFrag);
         }
     </script>
 </body>
